--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>hamcrest-core</artifactId>
             <version>2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>[3.6.1,)</version>
+        </dependency>
     </dependencies>
 
 
